# Confab

./: .cursorignore  .gitignore  CHANGELOG.md  Makefile  README.md  migration-path.md  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements.txt  server.py  tsconfig.frontend.json  turbo.json  vite.config.ts
.cursor/rules/: main.mdc
.github/workflows/: pr_checks_playwright.yml  pr_checks_quality.yml  pr_checks_tests.yml
confab/: __init__.py  __main__.py  core.py  db.py  server.py
confab/api/: __init__.py  app.py  contracts.py
confab/config/: __init__.py  settings.py
confab/domain/: __init__.py  history.py  modes.py
confab/prompting/: __init__.py  attachments.py  client.py  doc_plus.py  documents.py  pr_review.py  synthesis.py
confab/providers/: __init__.py  llm.py
confab/repositories/: __init__.py  conversations.py  opinions.py  settings.py
confab/services/: __init__.py  chat.py  consensus.py  documents.py  history.py  modes.py  pr_review.py  synthesis.py
confab/static/: gui.html  typography.css
confab/static/app/: gui.css  (+1 more)
docs/Developer/: API-Reference.md  Architecture.md  CLI.md  E2E-Policy.md  Get-Started.md  Mode-Development.md
docs/User/: Modes.md
e2e/: auth.spec.ts  chat.spec.ts  check-core-paths.mjs  composer-controls.spec.ts  consensus-pr.spec.ts  core-paths.ts  doc-plus.spec.ts  doc.spec.ts  mode-matrix.spec.ts  settings.spec.ts
e2e/support/: mockApi.ts  mockSupabase.ts
frontend/src/: config.ts  main.ts  styles.css
tests/: run.py  test_api_server.py  test_prompting.py
