[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "confab"
version = "0.4.1"
description = "A multi-chat high-productivity workground."
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
    "google-genai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg[binary]",
    "requests",
]

[project.scripts]
confab = "confab:main"

[tool.setuptools]
packages = ["confab"]
include-package-data = true

[tool.setuptools.package-data]
confab = [
    "static/*.html",
    "static/*.css",
]
